--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,6 @@
-adbc_driver_manager==1.10.0
-adbc_driver_postgresql==1.10.0
-adbc_driver_sqlite==1.10.0
-anywidget==0.9.21
-AppKit==0.2.8
-atheris==3.0.0
-beautifulsoup4==4.14.3
-bokeh==3.8.2
-boto3==1.42.45
-botocore==1.42.45
-brotli==1.2.0
-brotlicffi==1.2.0.0
-ConfigParser==7.2.0
-contextlib2==21.6.0
-cryptography==46.0.4
-cudf==0.6.1.post1
-cupy==13.6.0
-cycler==0.12.1
-Cython==3.2.4
-dask==2026.1.2
-dask_expr==2.0.0
-defusedxml==0.7.1
-dl==0.1.0
-docutils==0.22.4
-duckdb==1.4.4
-fastparquet==2025.12.0
-Foundation==0.1.0a0.dev1
-fqdn==1.5.1
-fsspec==2026.2.0
-gitdb_speedups==0.1.0
-h2==4.3.0
-HTMLParser==0.0.2
-huggingface_hub==0.36.0
-hypothesis==6.151.5
-ibis==3.3.0
-ipython==8.12.3
-ipywidgets==8.1.8
-isoduration==20.11.0
-jnius==1.1.0
-JPype1==1.6.0
-jsonpath_ng==1.7.0
-jsonpointer==3.0.0
-keyring==25.7.0
-lockfile==0.12.2
-lxml==6.0.2
-matplotlib==3.10.8
-mock==5.2.0
-modin==0.37.1
-mtrand==0.1
-mypy==1.19.1
-numarray==1.5.1
-Numeric==24.2
-numexpr==2.14.1
-odfpy==1.4.1
-olefile==0.47
-openpyxl==3.1.5
-pickle5==0.0.12
-plotly==6.5.0
-polars==1.38.1
-psutil==7.2.2
-py==1.11.0
-pycares==5.0.1
-pycurl==7.45.7
-pydantic==2.12.5
-PyInstaller==6.18.0
-pyodide==0.0.2
-pyOpenSSL==25.3.0
-pyperf==2.10.0
-PyQt4==4.11.4
-PyQt5==5.15.11
-PyQt6==6.10.2
-PySide6==6.10.2
-pyspark==4.1.1
-pytest==9.0.2
-python_calamine==0.6.1
-pyxlsb==1.0.10
-PyYAML==6.0.3
-qtpy==2.4.3
-railroad==0.5.0
-rfc3339_validator==0.1.4
-rfc3986_validator==0.1.1
-rfc3987==1.3.8
-rfc3987_syntax==1.1.0
-s3fs==2026.2.0
-scikit_learn==1.8.0
-scipy==1.17.0
-scipy_doctest==2.1.0
-sets==0.3.2
-setuptools_scm==9.2.2
-simplejson==3.20.2
-sniffio==1.3.1
-snowflake==1.11.0
-Sphinx==9.1.0
-SQLAlchemy==2.0.46
-sqlframe==3.46.2
-sqlparse==0.5.5
-sympy==1.14.0
-tables==3.10.2
-thread==2.0.6
-threadpoolctl==3.6.0
-traitlets==5.14.3
-trio==0.32.0
-trove_classifiers==2026.1.14.14
-truststore==0.10.4
-uri_template==1.3.0
-urllib3_secure_extra==0.1.0
-vegafusion==2.0.3
-webcolors==25.10.0
-xarray==2026.1.0
-xlrd==2.0.2
-xlsxwriter==3.2.9
-xmlrpclib==1.0.1
+streamlit>=1.30.0
+pandas>=2.0.0
+numpy>=1.24.0
+requests>=2.31.0
+plotly>=5.18.0
+python-dotenv>=1.0.0
